# dsarp-transformer-refactoring-Public

./: .env.example  .gitignore  INTEGRATED_HISTORICAL_CSV_PIPELINE_COMPLETION.md  README.md  STAGE_1_COMPLETION.md  STAGE_2_COMPLETION.md  STAGE_3_COMPLETION.md  pyproject.toml
configs/: arcan_runner.yaml  arcan_schema.yaml  architectural_mapping.yaml  baseline_scoring.yaml  calibration.yaml  commit_selection.yaml  dataset.yaml  ensemble.yaml  evaluation.yaml  full_pipeline.yaml  historical_labels.yaml  improvement_scoring.yaml  integrated_pipeline.yaml  llm.yaml  logging.yaml  multimodal_model.yaml  recommendation_taxonomy.yaml  refactoring_miner.yaml  repositories.yaml  smell_matching.yaml  training.yaml  transformer.yaml
data/: affects-smell-affects.csv  metrics-component-metrics.csv  smells-smell-characteristics.csv
docs/: ablation_study.md  annotation_guide.md  arcan_before_after.md  data_leakage_prevention.md  dataset_variants.md  final_scoring.md  historical_label_generation.md  historical_mining.md  hpc_end_to_end.md  hpc_historical_pipeline.md  hpc_training.md  integrated_architecture.md  learning_to_rank.md  llm_validation.md  model_evaluation.md  offline_model_setup.md  refactoringminer_integration.md  repository_inference.md  reproducibility.md  smell_matching.md  stage2_dataset.md  training_inference_separation.md  transformer_architecture.md  two_layer_taxonomy.md
hpc/: build_dataset.slurm  build_historical_dataset.slurm  calibrate_transformer.slurm  environment.yml  evaluate_integrated_models.slurm  evaluate_ranker.slurm  evaluate_transformer.slurm  export_embeddings.slurm  generate_final_report.slurm  inference_transformer.slurm  mine_refactorings_array.slurm  requirements-hpc.txt  run_arcan_before_after_array.slurm  run_diversity.slurm  run_final_ensemble.slurm  run_full_pipeline.slurm  run_llm_validation.slurm  run_stage1.slurm  select_commits.slurm  select_top_candidates.slurm  start_vllm_server.slurm  submit_full_pipeline.sh  submit_historical_training_pipeline.sh  submit_stage2_pipeline.sh  train_integrated_ranker.slurm  train_integrated_transformer.slurm  train_ranker.slurm  train_transformer.slurm  tune_ranker_array.slurm
scripts/: build_historical_rank_dataset.py  evaluate_ranker.py  (+18 more)
(+158 files in other folders)
