[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsarp-refactoring-ranker"
version = "0.1.0"
description = "Interpretable refactoring recommendations for Arcan architectural smells"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pandas>=2.1", "numpy>=1.26", "pydantic>=2.5", "PyYAML>=6", "scikit-learn>=1.3", "Jinja2>=3.1", "typer>=0.9", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8", "pandas-stubs>=2.1", "types-PyYAML>=6"]
ml = ["torch>=2.1", "transformers>=4.38", "safetensors>=0.4", "tensorboard>=2.15", "pyarrow>=14", "scipy>=1.11", "joblib>=1.3"]
hpc = ["dsarp-refactoring-ranker[dev,ml]", "accelerate>=0.27", "mlflow>=2.10"]
ranking = ["xgboost>=2.0", "optuna>=3.5"]
explain = ["shap>=0.44"]
llm = ["httpx>=0.26"]

[project.scripts]
dsarp = "dsarp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dsarp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["dsarp"]
